--- a/_config.yml
+++ b/_config.yml
@@ -104,5 +104,5 @@ theme: corazon
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: https://github.com/thesun11/thesun.hexo.github.io.git
+  repo: https://github.com/thesun11/thesun.hexo.myblog.git
   branch: master
